Added flexboxes to main and footer elements

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <aside class="titles" id="title-about">
           <h2>About<br />Me</h2>
         </aside>
-        <article id="about-details">
+        <article class="content" id="about-details">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -53,23 +53,34 @@
           </p>
         </article>
       </section>
-      <br /><br />
+
       <section class="work">
         <aside class="titles" id="title-work">
           <h2>Work</h2>
         </aside>
-        <article id="work-details"></article>
+        <article class="content" id="work-details"></article>
       </section>
 
-      <section id="contact-me">
-        <h2>Contact Me</h2>
-        <div>
+      <section class="contact">
+        <adide class="titles" id="contact-me">
+          <h2>
+            Contact<br />
+            Me
+          </h2>
+        </adide>
+        <div class="content" id="contact-list">
           <ul>
-            <li class="contact-list">425.418.2121</li>
-            <li class="contact-list">parkerjmathis@gmail.com</li>
+            <li class="contact-list">Phone: 425.418.2121</li>
+            <li class="contact-list">Email: parkerjmathis@gmail.com</li>
             <li class="contact-list">
               <a href="#GitHub">GitHub</a>
             </li>
+            <!-- <li class="contact-list">
+              <a href="#Twitter">Twitter</a>
+            </li>
+            <li class="contact-list">
+              <a href="#Spotify">Spotify</a>
+            </li> -->
           </ul>
         </div>
       </section>
