Added photos for projects to Work section

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Pictures are from https://unsplash.com/ -->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
@@ -26,6 +28,8 @@
         </ul>
       </nav>
     </header>
+
+    <div class="background"></div>
 
     <main>
       <section class="about">
@@ -58,7 +62,22 @@
         <aside class="titles" id="title-work">
           <h2>Work</h2>
         </aside>
-        <article class="content" id="work-details"></article>
+        <article class="content content-work">
+          <div class="work-images">
+            <div id="project-1">
+              <img class="img" src="./assets/images/marble.jpg" alt="" />
+              <h3 class="img-title">Project 1</h3>
+            </div>
+            <div id="project-2">
+              <img class="img" src="./assets/images/marble.jpg" alt="" />
+              <h3 class="img-title">Project 2</h3>
+            </div>
+            <div id="project-3">
+              <img class="img" src="./assets/images/marble.jpg" alt="" />
+              <h3 class="img-title">Project 3</h3>
+            </div>
+          </div>
+        </article>
       </section>
 
       <section class="contact">
@@ -75,12 +94,6 @@
             <li class="contact-list">
               <a href="#GitHub">GitHub</a>
             </li>
-            <!-- <li class="contact-list">
-              <a href="#Twitter">Twitter</a>
-            </li>
-            <li class="contact-list">
-              <a href="#Spotify">Spotify</a>
-            </li> -->
           </ul>
         </div>
       </section>
