Added titles for projects

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <nav>
         <ul>
           <li class="navigation">
-            <a href="#about-details">About Me</a>
+            <a href="#title-about">About Me</a>
           </li>
           <li class="navigation">
-            <a href="#work-details">Work</a>
+            <a href="#title-work">Work</a>
           </li>
           <li class="navigation">
             <a href="#contact-me">Contact Me</a>
@@ -65,15 +65,15 @@
         <article class="content content-work">
           <div class="work-images">
             <div id="project-1">
-              <img class="img" src="./assets/images/marble.jpg" alt="" />
+              <img class="img-large" src="./assets/images/marble.jpg" alt="" />
               <h3 class="img-title">Project 1</h3>
             </div>
             <div id="project-2">
-              <img class="img" src="./assets/images/marble.jpg" alt="" />
+              <img class="img-small" src="./assets/images/marble.jpg" alt="" />
               <h3 class="img-title">Project 2</h3>
             </div>
             <div id="project-3">
-              <img class="img" src="./assets/images/marble.jpg" alt="" />
+              <img class="img-small" src="./assets/images/marble.jpg" alt="" />
               <h3 class="img-title">Project 3</h3>
             </div>
           </div>
