Added photo, work image hover effect, and background title

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ New images? -->
 
   <body>
     <header class="header">
-      <h1>Portfolio: Parker Mathis</h1>
+      <h1>Parker Mathis</h1>
       <nav>
         <ul>
           <li class="navigation">
@@ -40,8 +40,15 @@ New images? -->
         </ul>
       </nav>
     </header>
+    <section class="background">
+      <div class="background-banner"></div>
+      <div class="background-title">
+        <h2>Developer Portfolio</h2>
+        <p>Currently enrolled at UW Coding Boot Camp</p>
+      </div>
 
-    <div class="background-banner"></div>
+
+    </section>
 
     <main>
       <section class="about">
@@ -49,6 +56,9 @@ New images? -->
           <h2>About<br />Me</h2>
         </aside>
         <article class="content" id="about-details">
+          <div class="img-container">
+            <img src="./assets/images/parkerImage.png" alt="" height="200px" />
+          </div>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
