Added content to About Me section

--- a/index.html
+++ b/index.html
@@ -46,8 +46,6 @@ New images? -->
         <h2>Developer Portfolio</h2>
         <p>Currently enrolled at UW Coding Boot Camp</p>
       </div>
-
-
     </section>
 
     <main>
@@ -60,22 +58,17 @@ New images? -->
             <img src="./assets/images/parkerImage.png" alt="" height="200px" />
           </div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Scelerisque fermentum dui faucibus in ornare quam viverra. Elementum
-            eu facilisis sed odio. Nascetur ridiculus mus mauris vitae.
-            Elementum nibh tellus molestie nunc non. Turpis in eu mi bibendum
-            neque egestas congue. Rhoncus aenean vel elit scelerisque mauris
-            pellentesque pulvinar. Auctor elit sed vulputate mi sit amet.
-            Faucibus ornare suspendisse sed nisi lacus sed viverra.
+            Hello! My name is Parker Mathis and this is my developer portfolio.
+            I'm currently enrolled in the UW coding boot camp and am expecting
+            to complete the program in March 2023. Throughout the boot camp, I
+            will be using this portfolio to show links for my projects and
+            assignments. This portfolio will be a project itself, and I'm
+            planning to update it as a learn more throughout the boot camp.
             <br /><br />
-            Consequat semper viverra nam libero justo. Pellentesque diam
-            volutpat commodo sed egestas egestas fringilla phasellus faucibus.
-            Quis commodo odio aenean sed adipiscing diam donec. Erat velit
-            scelerisque in dictum non consectetur a erat. At erat pellentesque
-            adipiscing commodo elit. Sed viverra ipsum nunc aliquet bibendum
-            enim facilisis. Lacus suspendisse faucibus interdum posuere lorem.
-            Turpis egestas integer eget aliquet nibh praesent tristique magna.
+            So far in the boot camp we've learned HTML, CSS, and we're just
+            getting started on JavaScript! Later on in the boot camp I'll be
+            learning Node, SQL, MongoDB, React, and more. Check back here later to see
+            more!
           </p>
         </article>
       </section>
