Updated to include link for movie moodboard

--- a/index.html
+++ b/index.html
@@ -113,12 +113,14 @@
               </div>
             </div>
             <div class="img-small" id="project-5">
-              <span data-tooltip="Coming Soon!"
+              <a
+                href="https://abbeydoyle.github.io/movie-moodboard/"
+                target="_blank"
                 ><div class="work-background" id="background-project5"></div
-              ></span>
+              ></a>
               <div class="img-title">
-                <h3>More Projects Coming Soon!</h3>
-                <p>TBD</p>
+                <h3>Movie Moodboard (Group Project 1)</h3>
+                <p>November 2022</p>
               </div>
             </div>
           </div>
