Updated portfolio links

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
             <a href="#contact-me">Contact Me</a>
           </li>
           <li class="navigation">
-            <span data-tooltip="Coming Soon!"
-              ><a href="#Resume">Resume</a></span
-            >
+            <span data-tooltip="Coming Soon!"><a href="#Resume">Resume</a></span>
           </li>
         </ul>
       </nav>
@@ -46,17 +44,12 @@
             <img src="./assets/images/parkerImage.png" alt="" height="200px" />
           </div>
           <p>
-            Hello! My name is Parker Mathis and this is my developer portfolio.
-            I'm currently enrolled in the UW coding boot camp and am expecting
-            to complete the program in March 2023. Throughout the boot camp, I
-            will be using this portfolio to show links for my projects and
-            assignments. This portfolio will be a project itself, and I'm
-            planning to update it as I learn more throughout the boot camp.
+            Hello! My name is Parker Mathis and this is my developer portfolio. I'm currently enrolled in the UW coding boot camp and am expecting to complete the program in March 2023. Throughout the
+            boot camp, I will be using this portfolio to show links for my projects and assignments. This portfolio will be a project itself, and I'm planning to update it as I learn more throughout
+            the boot camp.
             <br /><br />
-            So far in the boot camp we've learned HTML, CSS, and we're just
-            getting started on JavaScript! Later on in the boot camp I'll be
-            learning Node, SQL, MongoDB, React, and more. Check back here later
-            to see more!
+            So far in the boot camp we've learned HTML, CSS, and we're just getting started on JavaScript! Later on in the boot camp I'll be learning Node, SQL, MongoDB, React, and more. Check back
+            here later to see more!
           </p>
         </div>
       </section>
@@ -69,58 +62,38 @@
         <div class="content content-work">
           <div class="work-images">
             <div class="img-large" id="project-1">
-              <a
-                href="https://github.com/markerpathis/portfolio"
-                target="_blank"
-                ><div class="work-background" id="background-project1"></div
-              ></a>
+              <a href="https://new-dnd7.herokuapp.com/" target="_blank"><div class="work-background" id="background-project1"></div></a>
               <div class="img-title">
-                <h3>Portfolio Project (Repo)</h3>
-                <p>October 2022</p>
+                <h3>newDND (Group Project 2)</h3>
+                <p>January 2023</p>
               </div>
             </div>
             <div class="img-small" id="project-2">
-              <a
-                href="https://github.com/markerpathis/semantic-markup"
-                target="_blank"
-                ><div class="work-background" id="background-project2"></div
-              ></a>
+              <a href="https://abbeydoyle.github.io/movie-moodboard/" target="_blank"><div class="work-background" id="background-project2"></div></a>
               <div class="img-title">
-                <h3>Semantic Markup Project (Repo)</h3>
-                <p>September 2022</p>
+                <h3>Movie Moodboard (Group Project 1)</h3>
+                <p>November 2022/p></p>
               </div>
             </div>
             <div class="img-small" id="project-3">
-              <a
-                href="https://markerpathis.github.io/landing-page/"
-                target="_blank"
-                ><div class="work-background" id="background-project3"></div
-              ></a>
+              <a href="http://code-onion.herokuapp.com/" target="_blank"><div class="work-background" id="background-project3"></div></a>
               <div class="img-title">
-                <h3>Landing Page Project</h3>
-                <p>September 2022</p>
+                <h3>Code Onion (MVC Tech Blog)</h3>
+                <p>January 2023</p>
               </div>
             </div>
             <div class="img-small" id="project-4">
-              <a
-                href="https://markerpathis.github.io/prework-study-guide/"
-                target="_blank"
-                ><div class="work-background" id="background-project4"></div
-              ></a>
+              <a href="https://github.com/markerpathis/orm-ecommerce-back-end" target="_blank"><div class="work-background" id="background-project4"></div></a>
               <div class="img-title">
-                <h3>Boot Camp Pre-Work</h3>
-                <p>August 2022</p>
+                <h3>ORM e-Commerce Back End (Repo)</h3>
+                <p>January 2023</p>
               </div>
             </div>
             <div class="img-small" id="project-5">
-              <a
-                href="https://abbeydoyle.github.io/movie-moodboard/"
-                target="_blank"
-                ><div class="work-background" id="background-project5"></div
-              ></a>
+              <a href="https://github.com/markerpathis/sql-employee-manager" target="_blank"><div class="work-background" id="background-project5"></div></a>
               <div class="img-title">
-                <h3>Movie Moodboard (Group Project 1)</h3>
-                <p>November 2022</p>
+                <h3>SQL Employee Manager (Repo)</h3>
+                <p>December 2022</p>
               </div>
             </div>
           </div>
@@ -140,9 +113,7 @@
             <li class="contact-list">Email: parkerjmathis@gmail.com</li>
             <li class="contact-list">
               <!-- Setting the target as blank will open a new window or tab. Source: https://www.w3schools.com/tags/att_a_target.asp -->
-              <a href="https://github.com/markerpathis" target="_blank"
-                >GitHub</a
-              >
+              <a href="https://github.com/markerpathis" target="_blank">GitHub</a>
             </li>
           </ul>
         </div>
