--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <a href="https://abbeydoyle.github.io/movie-moodboard/" target="_blank"><div class="work-background" id="background-project2"></div></a>
               <div class="img-title">
                 <h3>Movie Moodboard (Group Project 1)</h3>
-                <p>November 2022/p></p>
+                <p>November 2022</p>
               </div>
             </div>
             <div class="img-small" id="project-3">
